# linkertest

./: CMakeLists.txt  main.cpp  pub.c  pub.h  wrap.cpp  wrap.def  wrap.h  wrap.map
